==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/i2c/implementation_2/hal_ll_i2c_master.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K 400000UL
#define HAL_LL_I2C_MASTER_SPEED_1M 1000000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT 0xFFFFU
#define HAL_LL_I2C_LOOP_INDEX 10000U
#define HAL_LL_I2C1EN_BIT 21
#define HAL_LL_I2C2EN_BIT 22
    #define HAL_LL_I2C3EN_BIT 23
    #define HAL_LL_I2C4EN_BIT 24
    #define HAL_LL_I2C1SEL0_BIT 16
    #define HAL_LL_I2C1SEL1_BIT 17
    #define HAL_LL_I2C2SEL0_BIT 18
    #define HAL_LL_I2C2SEL1_BIT 19
    #define HAL_LL_I2C3SEL0_BIT 20
    #define HAL_LL_I2C3SEL1_BIT 21
    #define HAL_LL_I2C4SEL0_BIT 22
    #define HAL_LL_I2C4SEL1_BIT 23
    #define HAL_LL_I2C_100K 0x00303D5D
    #define HAL_LL_I2C_400K 0x0010061A
    #define HAL_LL_I2C_1M 0x00000107
    #define HAL_LL_I2C3EN_BIT 23
    #define HAL_LL_I2C4EN_BIT 7

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    size_t transfer_counter = NULL;
    uint8_t status = NULL;

    /**
     * @note When R/W = 0, the input sample acquisition period starts
     * on the falling edge of SCL once the C0 bit of the command
     * byte has been latched, and ends when a Stop or
     * repeated Start condition has been issued.
     **/
    #ifdef __TFT_RESISTIVE_TSC2003__
    Delay_1ms();
    #endif

    hal_ll_i2c_master_configure_transfer ( map->base,
                                         ( map->address << 1 & HAL_LL_I2C_CR2_SADD ) |
                                         ( len_read_data << 16 & HAL_LL_I2C_CR2_NBYTES ) |
                                         HAL_LL_I2C_CR2_RD_WRN |
                                         HAL_LL_I2C_CR2_START
                                         );

    for ( transfer_counter; transfer_counter < len_read_data; transfer_counter++ ) {
        while ( !( check_reg_bit( &( hal_ll_hw_reg->isr ), HAL_LL_I2C_RXNE_BIT ) ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }
        read_data_buf[ transfer_counter ] = hal_ll_hw_reg->rxdr;
    }

    if ( ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) || ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) ) {
        status = hal_ll_i2c_master_stop( map );
    } else {
        status = hal_ll_i2c_master_start( map );
    }

    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    hal_ll_i2c_master_reset_cr2( hal_ll_hw_reg );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    size_t transfer_counter = NULL;
    uint8_t status = NULL;

    hal_ll_i2c_master_configure_transfer ( map->base,
                                         ( map->address << 1 & HAL_LL_I2C_CR2_SADD ) |
                                         ( len_write_data << 16 & HAL_LL_I2C_CR2_NBYTES ) |
                                         !HAL_LL_I2C_CR2_RD_WRN |
                                         HAL_LL_I2C_CR2_START
                                         );

    for ( transfer_counter; transfer_counter < len_write_data; transfer_counter++ )
    {
        while ( !( check_reg_bit( &( hal_ll_hw_reg->isr ), HAL_LL_I2C_TXIS_BIT ) ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
        hal_ll_hw_reg->txdr = write_data_buf[ transfer_counter ];
    }

    time_counter = map->timeout;
    while ( !( check_reg_bit( &( hal_ll_hw_reg->isr ), HAL_LL_I2C_TXE_BIT ) ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    if ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP )
    {
        hal_ll_i2c_master_stop( map );
    }

    hal_ll_i2c_master_reset_cr2( hal_ll_hw_reg );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t loop_index = HAL_LL_I2C_LOOP_INDEX;

    set_reg_bit( &(hal_ll_hw_reg->cr2), HAL_LL_I2C_CR2_START_BIT );

    if ( check_reg_bit( &( hal_ll_hw_reg->isr ), HAL_LL_I2C_ARLO_BIT ) )
        return HAL_LL_I2C_MASTER_ARBITRATION_LOST;

    while ( loop_index-- )
        asm nop;

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_stop( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = ( hal_ll_i2c_base_handle_t* )map->base;
    uint16_t time_counter = map->timeout;
    uint32_t loop_index = HAL_LL_I2C_LOOP_INDEX;

    set_reg_bit( &(hal_ll_hw_reg->cr2), HAL_LL_I2C_CR2_STOP_BIT );

    while ( !( hal_ll_hw_reg->isr & HAL_LL_I2C_ISR_STOPF_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_STOP;
        }
    }

    if ( map->timeout < HAL_LL_I2C_LOOP_INDEX ) {
        while ( loop_index-- )
            asm nop;
    }

    hal_ll_hw_reg->isr &= ~HAL_LL_I2C_ISR_STOPF_BIT;

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_master_set_clock( hal_ll_i2c_hw_specifics_map_t *map, bool hal_ll_state ) {
    switch ( map->module_index )
    {
        #if defined(I2C_MODULE_1)
        case ( hal_ll_i2c_module_num(I2C_MODULE_1) ):
            hal_ll_i2c1_set_clock( hal_ll_state );
            break;
        #endif
        #if defined(I2C_MODULE_2)
        case ( hal_ll_i2c_module_num(I2C_MODULE_2) ):
            hal_ll_i2c2_set_clock( hal_ll_state );
            break;
        #endif
        #if defined(I2C_MODULE_3)
        case ( hal_ll_i2c_module_num(I2C_MODULE_3) ):
            hal_ll_i2c3_set_clock( hal_ll_state );
            break;
        #endif
        #if defined(I2C_MODULE_4)
        case ( hal_ll_i2c_module_num(I2C_MODULE_4) ):
            hal_ll_i2c4_set_clock( hal_ll_state );
            break;
        #endif

        default:
            break;
    }
}

static hal_ll_err_t hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;

    clear_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_PE_BIT );
    while ( check_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_PE_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_INIT;
        }
    }

    hal_ll_hw_reg->cr1 &= HAL_LL_I2C_FILTERS_OFF;

    hal_ll_hw_reg->timingr = hal_ll_i2c_get_speed( map );

    hal_ll_hw_reg->cr1 |= HAL_LL_I2C_CR1_RXTX_INT;

    set_reg_bit( &( hal_ll_hw_reg->cr1 ), HAL_LL_I2C_PE_BIT );

    return HAL_LL_I2C_MASTER_SUCCESS;
}
